retrieveUnpackaged/objects/MedicalRecord__c.object
<CustomObject>
    <fields>
        <fullName>ActivityDate__c</fullName>
        <description>/ The date of the surgery/device activation</description>
        <label>Surgery / Activation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>AllElectrodesInserted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>/</description>
        <label>All stimulating electrodes inserted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AudPositioner__c</fullName>
        <description>/</description>
        <label>Aud. Positioner</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer__c</fullName>
        <description>/</description>
        <label>Customer</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>MedicalRecords</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DrilledToRecessGaugeDepth__c</fullName>
        <defaultValue>false</defaultValue>
        <description>/</description>
        <label>Drilled to Depth of Recess Gauge</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EquipmentMaterialNumber__c</fullName>
        <description>/</description>
        <formula>Equipment__r.Material__r.MaterialNumber__c</formula>
        <label>Material Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Equipment__c</fullName>
        <description>/ The Implant or Processor device</description>
        <label>Serial Number</label>
        <referenceTo>Equipment__c</referenceTo>
        <relationshipLabel>Medical Records (Device)</relationshipLabel>
        <relationshipName>MedicalRecords</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ImplantedEar__c</fullName>
        <description>/</description>
        <label>Implanted Ear</label>
        <picklist>
            <picklistValues>
                <fullName>right</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>left</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>IsReplacement__c</fullName>
        <defaultValue>false</defaultValue>
        <description>/</description>
        <label>Device Replacment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LegacySystemName__c</fullName>
        <description>TBD /</description>
        <label>Legacy System Name</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Material__c</fullName>
        <description>/</description>
        <label>Model Number</label>
        <referenceTo>Material__c</referenceTo>
        <relationshipLabel>MedicalRecords</relationshipLabel>
        <relationshipName>MedicalRecords</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MedicalRecordIdLs__c</fullName>
        <description>ExternalMedicalRecordId /</description>
        <externalId>true</externalId>
        <label>MedicalRecord Id LS</label>
        <length>10</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>MedicalRecordId__c</fullName>
        <displayFormat>M{000000000}</displayFormat>
        <externalId>true</externalId>
        <label>MedicalRecord Id</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>NumberOfElectrodes__c</fullName>
        <description>/</description>
        <label>Number of electrodes inserted</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OtherDrillingDepth__c</fullName>
        <description>/</description>
        <label>Other Drilling Depth of Recess im mm</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OtherLessElectrodesReason__c</fullName>
        <description>/</description>
        <label>Other electrodes reason</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Patient__c</fullName>
        <description>MasterDetail(Order__c, OrderItems) / Patient this Operative/Registration report refers to</description>
        <label>Patient</label>
        <referenceTo>Patient__c</referenceTo>
        <relationshipLabel>Medical Records</relationshipLabel>
        <relationshipName>MedicalRecords</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Professional__c</fullName>
        <description>/ ?Activation Report? ==&gt; Audiologist
?Operative Report? ==&gt;Surgeon</description>
        <label>Professional</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>MedicalRecords</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RecordTypeLabel__c</fullName>
        <description>Formula field for translating the record type in a readable label</description>
        <formula>IF(RecordTypeId==&quot;012M0000000Ch4d&quot;, &quot;Product Registration&quot;,IF(RecordTypeId==&quot;012M0000000Ch4e&quot;, &quot;Surgery Report&quot;,&quot;Other&quot;))</formula>
        <label>Record Type Label</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ReplacedDevice__c</fullName>
        <label>Device to be replaced</label>
        <referenceTo>Equipment__c</referenceTo>
        <relationshipLabel>Medical Records (Device to be replaced)</relationshipLabel>
        <relationshipName>MedicalRecords2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SalesOrg__c</fullName>
        <defaultValue>TEXT(4300)</defaultValue>
        <description>Required field by the iBolt integration. At the moment the value is set to 4300</description>
        <label>Sales Organization</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SecuredToBone__c</fullName>
        <defaultValue>false</defaultValue>
        <description>/</description>
        <label>Secured to Bone</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>StandardLessElectrodesReason__c</fullName>
        <description>/</description>
        <label>Reason for less electrodes</label>
        <picklist>
            <picklistValues>
                <fullName>cochlear ossification</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>cochlear anatomy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>malformed/mondini malformation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SurgeryType__c</fullName>
        <description>/</description>
        <label>Surgery Type</label>
        <picklist>
            <picklistValues>
                <fullName>Implantation</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Explantation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reimplantation</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>TechniqueUsed__c</fullName>
        <description>/</description>
        <label>Technique Used</label>
        <picklist>
            <picklistValues>
                <fullName>Minimalaccess-incision&lt;6cm</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Traditionalpostauricularincision</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Traditional postauricular incision</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Medical Record</label>
    <listViews>
        <fullName>All</fullName>
        <columns>RECORDTYPE</columns>
        <columns>MedicalRecordId__c</columns>
        <columns>NAME</columns>
        <columns>Patient__c</columns>
        <columns>Professional__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>NoSerialNumber</fullName>
        <booleanFilter>1 OR 2</booleanFilter>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>Customer__c</columns>
        <columns>ActivityDate__c</columns>
        <columns>Professional__c</columns>
        <columns>Equipment__c</columns>
        <columns>Material__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Equipment__c</field>
            <operation>equals</operation>
            <value>NULL</value>
        </filters>
        <filters>
            <field>Equipment__c</field>
            <operation>equals</operation>
        </filters>
        <label>No Serial Number</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Medical Records</pluralLabel>
    <recordTypes>
        <fullName>ActivationReport</fullName>
        <active>true</active>
        <label>Product Registration</label>
    </recordTypes>
    <recordTypes>
        <fullName>SurgeryReport</fullName>
        <active>true</active>
        <label>Surgery Report</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>ActivityDate</fullName>
        <active>true</active>
        <errorConditionFormula>ISBLANK( ActivityDate__c )</errorConditionFormula>
        <errorMessage>Date has to be specified</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CustomerNumber</fullName>
        <active>false</active>
        <errorConditionFormula>ISBLANK(Customer__c)</errorConditionFormula>
        <errorMessage>Customer has to be filled</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ImplantedEar</fullName>
        <active>false</active>
        <errorConditionFormula>AND((  BEGINS(RecordTypeId,&quot;012M0000000Ch4e&quot;)) , ISPICKVAL( ImplantedEar__c , &apos;&apos;))</errorConditionFormula>
        <errorMessage>Implented Ear has to be specified</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Material</fullName>
        <active>true</active>
        <errorConditionFormula>ISBLANK(  Material__c )</errorConditionFormula>
        <errorMessage>Model Number has to be specified</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>SurgeryType</fullName>
        <active>true</active>
        <errorConditionFormula>AND(( RecordTypeId  = &quot;012D0000000MRmo&quot;) ,    ISPICKVAL(SurgeryType__c,&apos;&apos; ))</errorConditionFormula>
        <errorMessage>SurgeryType has to be specified</errorMessage>
    </validationRules>
</CustomObject>